--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,16 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'30369'"
+       "'30375'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,11 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "livescore=c.livescore(mid=\"30369\")"
+    "livescore=c.livescore(mid=\"30375\")"
    ]
   },
   {
@@ -90,16 +90,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\"batting\": {\"team\": \"Kings XI Punjab\", \"score\": [{\"inning_num\": \"1\", \"runs\": \"66\", \"wickets\": \"0\", \"overs\": \"6.5\", \"declare\": null}], \"batsman\": [{\"name\": \"Rahul\", \"runs\": \"30\", \"balls\": \"21\", \"fours\": \"4\", \"six\": \"0\"}, {\"name\": \"Mayank Agarwal\", \"runs\": \"31\", \"balls\": \"21\", \"fours\": \"3\", \"six\": \"2\"}]}, \"bowling\": {\"team\": \"Rajasthan Royals\", \"score\": [], \"bowler\": [{\"name\": \"Shreyas Gopal\", \"overs\": \"0.5\", \"maidens\": \"0\", \"runs\": \"6\", \"wickets\": \"0\"}]}}'"
+       "{'batting': {'team': 'Sunrisers Hyderabad',\n",
+       "  'score': [{'inning_num': '1',\n",
+       "    'runs': '90',\n",
+       "    'wickets': '1',\n",
+       "    'overs': '10.5',\n",
+       "    'declare': None}],\n",
+       "  'batsman': [{'name': 'Bairstow',\n",
+       "    'runs': '37',\n",
+       "    'balls': '28',\n",
+       "    'fours': '2',\n",
+       "    'six': '1'},\n",
+       "   {'name': 'Manish Pandey',\n",
+       "    'runs': '3',\n",
+       "    'balls': '4',\n",
+       "    'fours': '0',\n",
+       "    'six': '0'}]},\n",
+       " 'bowling': {'team': 'Delhi Capitals',\n",
+       "  'score': [],\n",
+       "  'bowler': [{'name': 'Axar',\n",
+       "    'overs': '0.5',\n",
+       "    'maidens': '0',\n",
+       "    'runs': '8',\n",
+       "    'wickets': '0'}]}}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
